horizontal scrollbar fixed

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,11 +1,14 @@
 .footer {
+  width: 100%;
+  max-width: 880px;
   margin: 0;
 }
 
 .footer__caption {
   color: #545454;
-  padding: 85px 962px 60px 0px;
-  width: 318px;
+  padding: 0px 0px 60px ;
+  max-width: 318px;
+  width: 100%;
   height: 18px;
   font-family: "Inter-Normal";
   font-size: 14px;
@@ -13,10 +16,12 @@
 }
 
 @media screen and (max-width: 320px) and (max-width: 775px) {
-  .footer__caption {
-    margin: 48px 19px 0;
+  .footer {
+    width: 100%;
+    padding-top: 48px;
     padding-bottom: 36px;
-    display: flex;
-    justify-content: center;
+}
+  .footer__caption {
+    width: 100%;
   }
 }
