--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,19 +6,19 @@
 }
 
 .header__logo {
-  display: flex;
-  margin-top: 45px;
+  /* display: flex; */
+  /* margin-top: 45px; */
   margin-bottom: 40px;
-  /* margin-right: 707px; */
 }
 
 @media screen and (max-width: 320px) and (max-width: 775px) {
   .header {
-    margin: 0 auto;
+    width: 100%;
+    margin: 28px auto 0px;
   }
 
   .header__logo {
-    margin: 28px 234px 32px 0;
+    margin: 0px 0px 32px 27px;
     width: 126px;
   }
 }
