--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,8 +1,6 @@
 .page {
   background: black;
   color: white;
-  max-width: 100%;
-  margin: 0 auto;
 }
 
 .page__section {
@@ -16,12 +14,10 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  margin: 0px 200px;
 }
 
 @media screen and (max-width: 320px) and (max-width: 775px) {
-  .page {
-    width: auto;
-    max-width: calc(100% - 40px);
+    .page__section {
+      max-width: calc(100% - 40px);
   }
 }
