--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -4,11 +4,12 @@
   padding: 0;
   margin: 40px auto 0;
   max-width: 880px;
+  width: 100%;
 }
 
 .profile__avatar {
   margin: 0 24px 0 0;
-  width: 120px;
+  max-width: 120px;
   height: 120px;
   border-radius: 50%;
   object-fit: cover;
@@ -22,6 +23,7 @@
     "description description";
   grid-template-columns: minmax(auto 373px) auto;
   grid-gap: 18px;
+  width: 100%;
 }
 
 .profile__title {
@@ -35,6 +37,7 @@
   margin: 0;
   padding: 0;
   grid-area: title;
+  width: 100%;
 }
 
 .profile__description {
@@ -46,22 +49,26 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  width: 100%;
   max-width: 373px;
   grid-area: description;
 }
 
 .profile__edit-button {
   background: transparent url(../images/Edit\ Button.svg) center no-repeat;
-  width: 24px;
+  max-width: 24px;
+  width: 100%;
   height: 24px;
   margin-top: 15px;
   align-self: center;
   grid-area: button;
+
 }
 
 .profile__add-button {
   background: transparent url(../images/Add\ Button.svg) center no-repeat;
-  width: 150px;
+  max-width: 150px;
+  width: 100%;
   height: 50px;
   margin-left: auto;
 }
@@ -81,21 +88,18 @@
 @media screen and (max-width: 320px) and (max-width: 775px) {
   .profile {
     flex-direction: column;
+    width: 100%;
   }
 
   .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     text-align: center;
+    width: 100%;
   }
-
-  .profile__title {
-    margin-top: 30px;
-  }
-
   .profile__add-button {
-    margin: 36px 0;
-    width: 282px;
-    height: 50px;
-    flex-shrink: 0;
-    border: 2px solid #fff;
+    margin: 0;
   }
 }
+
