--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,4 @@
 @import url(../vendor/normalize.css);
-@import url(../blocks/body.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/header.css);
 @import url(../blocks/page.css);
@@ -8,4 +7,8 @@
 @import url(../blocks/card.css);
 @import url(../blocks/footer.css);
 
+
+* {
+  outline: 1px solid red;
+}
 
